feat: add conditions to status object in CR
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/config/samples/ai_v1alpha1_morpheus.yaml
+++ b/config/samples/ai_v1alpha1_morpheus.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/part-of: morpheus-operator
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: morpheus-operator
+    hello: there2
   name: morpheus-sample
   namespace: zvika-test
 spec:
