feat: add to morpheus deployment postStartHook
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/config/samples/ai_v1alpha1_morpheus.yaml
+++ b/config/samples/ai_v1alpha1_morpheus.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/created-by: morpheus-operator
     hello: there2
   name: morpheus-sample
-  namespace: zvika-test
+  namespace: zvika-test2
 spec:
   serviceAccountName: morpheus-sa
   autoBindSccToSa: true
