feat: add jupyter-notebook server secret,service and route
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/config/crd/bases/ai.redhat.com_morpheus.yaml
+++ b/config/crd/bases/ai.redhat.com_morpheus.yaml
@@ -37,6 +37,11 @@ spec:
             properties:
               autoBindSccToSa:
                 type: boolean
+              jupyter:
+                properties:
+                  jupyterPassword:
+                    type: string
+                type: object
               milvus:
                 properties:
                   etcd:
