fix: fix couple of bugs
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/config/crd/bases/ai.redhat.com_morpheus.yaml
+++ b/config/crd/bases/ai.redhat.com_morpheus.yaml
@@ -39,7 +39,7 @@ spec:
                 type: boolean
               jupyter:
                 properties:
-                  jupyterPassword:
+                  labPassword:
                     type: string
                 type: object
               milvus:
