--- a/config/samples/ai_v1alpha1_morpheus.yaml
+++ b/config/samples/ai_v1alpha1_morpheus.yaml
@@ -16,5 +16,5 @@ spec:
       rootUser: admin
       rootPassword: admin123#
   jupyter:
-    labPassword: theQueen
+    labPassword: yourPassword
 
