fix: RBAC permissions for Routes and secret docs: add few steps that explains how to access jupyter lab
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/bundle/manifests/ai.redhat.com_morpheus.yaml
+++ b/bundle/manifests/ai.redhat.com_morpheus.yaml
@@ -36,6 +36,11 @@ spec:
             properties:
               autoBindSccToSa:
                 type: boolean
+              jupyter:
+                properties:
+                  labPassword:
+                    type: string
+                type: object
               milvus:
                 properties:
                   etcd:
