--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -20,6 +20,18 @@ rules:
 - apiGroups:
   - '*'
   resources:
+  - secrets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - '*'
+  resources:
   - serviceaccounts
   verbs:
   - create
@@ -84,6 +96,18 @@ rules:
   resources:
   - rolebindings
   - roles
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - route.openshift.io
+  resources:
+  - routes
   verbs:
   - create
   - delete
