feat: add morpheus rag CVEs example
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -12,5 +12,12 @@ RUN mamba install -n morpheus -y -c conda-forge \
         pip install jupyterlab_nvdashboard==0.9 &&\
         jupyter contrib nbextension install --user
 
+
+RUN mamba env update -n morpheus -f /tmp/morpheus-env.yaml
+
+RUN git clone https://github.com/NVIDIA/GenerativeAIExamples.git /tmp/GenerativeAIExamples/ && \
+     mv /tmp/GenerativeAIExamples/experimental/event-driven-rag-cve-analysis/ /workspace/examples && \
+     rm -rf /tmp/GenerativeAIExamples/
+
 CMD ["jupyter-lab", "--ip=0.0.0.0", "--no-browser", "--allow-root"]
 
