--- a/jupyter/morpheus-env.yaml
+++ b/jupyter/morpheus-env.yaml
@@ -1,519 +1,44 @@
-name: morpheus
+# SPDX-FileCopyrightText: Copyright (c) 2023, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 channels:
-  - pytorch
-  - file:///opt/conda/conda-bld
-  - rapidsai
-  - nvidia
   - conda-forge
+  - huggingface
+  - pytorch
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_kmp_llvm
-  - absl-py=1.4.0=pyhd8ed1ab_0
-  - adagio=0.2.4=pyhd8ed1ab_0
-  - alabaster=0.7.16=pyhd8ed1ab_0
-  - alembic=1.13.1=pyhd8ed1ab_1
-  - aniso8601=9.0.1=pyhd8ed1ab_0
-  - annotated-types=0.6.0=pyhd8ed1ab_0
-  - antlr-python-runtime=4.11.1=pyhd8ed1ab_0
-  - antlr4-python3-runtime=4.11.1=pyh1a96a4e_0
-  - anyio=4.4.0=pyhd8ed1ab_0
-  - appdirs=1.4.4=pyh9f0ad1d_0
-  - argon2-cffi=23.1.0=pyhd8ed1ab_0
-  - argon2-cffi-bindings=21.2.0=py310h2372a71_4
-  - arrow=1.3.0=pyhd8ed1ab_0
-  - asn1crypto=1.5.1=pyhd8ed1ab_0
-  - asttokens=2.4.1=pyhd8ed1ab_0
-  - atk-1.0=2.38.0=h04ea711_2
-  - attrs=23.2.0=pyh71513ae_0
-  - aws-c-auth=0.7.11=h0b4cabd_1
-  - aws-c-cal=0.6.9=h14ec70c_3
-  - aws-c-common=0.9.12=hd590300_0
-  - aws-c-compression=0.2.17=h572eabf_8
-  - aws-c-event-stream=0.4.1=h97bb272_2
-  - aws-c-http=0.8.0=h9129f04_2
-  - aws-c-io=0.14.0=hf8f278a_1
-  - aws-c-mqtt=0.10.1=h2b97f5f_0
-  - aws-c-s3=0.4.9=hca09fc5_0
-  - aws-c-sdkutils=0.1.13=h572eabf_1
-  - aws-checksums=0.1.17=h572eabf_7
-  - aws-crt-cpp=0.26.0=h04327c0_8
-  - aws-sdk-cpp=1.11.210=hba3e011_10
-  - babel=2.14.0=pyhd8ed1ab_0
-  - beautifulsoup4=4.12.3=pyha770c72_0
-  - betterproto=1.2.5=pyhd3deb0d_1
-  - blas=2.116=mkl
-  - blas-devel=3.9.0=16_linux64_mkl
-  - bleach=6.1.0=pyhd8ed1ab_0
-  - blinker=1.7.0=pyhd8ed1ab_0
-  - bokeh=3.4.1=pyhd8ed1ab_0
-  - boost-cpp=1.84.0=h44aadfe_2
-  - brotli=1.1.0=hd590300_1
-  - brotli-bin=1.1.0=hd590300_1
-  - brotli-python=1.1.0=py310hc6cd4ac_1
-  - bzip2=1.0.8=hd590300_5
-  - c-ares=1.28.1=hd590300_0
-  - ca-certificates=2024.6.2=hbcca054_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - cachetools=5.3.3=pyhd8ed1ab_0
-  - cairo=1.18.0=h3faef2a_0
-  - cattrs=23.2.3=pyhd8ed1ab_0
-  - certifi=2024.6.2=pyhd8ed1ab_0
-  - cffi=1.16.0=py310h2fee648_0
-  - charset-normalizer=3.3.2=pyhd8ed1ab_0
-  - click=8.1.7=unix_pyh707e725_0
-  - cloudpickle=3.0.0=pyhd8ed1ab_0
-  - colorama=0.4.6=pyhd8ed1ab_0
-  - comm=0.2.2=pyhd8ed1ab_0
-  - configargparse=1.5.5=pyhd8ed1ab_0
-  - contourpy=1.2.1=py310hd41b1e2_0
-  - cryptography=42.0.5=py310h75e40e8_0
-  - cuda-cccl_linux-64=12.1.109=ha770c72_0
-  - cuda-cudart=12.1.105=hd3aeb46_0
-  - cuda-cudart-dev=12.1.105=hd3aeb46_0
-  - cuda-cudart-dev_linux-64=12.1.105=h59595ed_0
-  - cuda-cudart-static=12.1.105=hd3aeb46_0
-  - cuda-cudart-static_linux-64=12.1.105=h59595ed_0
-  - cuda-cudart_linux-64=12.1.105=h59595ed_0
-  - cuda-cupti=12.1.105=h59595ed_0
-  - cuda-libraries=12.1.0=0
-  - cuda-nvcc-dev_linux-64=12.1.105=ha770c72_0
-  - cuda-nvcc-impl=12.1.105=hd3aeb46_0
-  - cuda-nvcc-tools=12.1.105=hd3aeb46_0
-  - cuda-nvrtc=12.1.105=hd3aeb46_0
-  - cuda-nvtx=12.1.105=h59595ed_0
-  - cuda-opencl=12.1.105=h59595ed_0
-  - cuda-python=12.4.0=py310h9f9f131_1
-  - cuda-runtime=12.1.0=0
-  - cuda-version=12.1=h1d6eff3_3
-  - cudf=24.02.02=cuda12_py310_240227_gdd34fdbe35_0
-  - cupy=13.1.0=py310h7aad9d2_1
-  - cupy-core=13.1.0=py310h4e1f601_1
-  - cycler=0.12.1=pyhd8ed1ab_0
-  - cyrus-sasl=2.1.27=h54b06d7_7
-  - cytoolz=0.12.3=py310h2372a71_0
-  - dask=2024.1.1=pyhd8ed1ab_0
-  - dask-core=2024.1.1=pyhd8ed1ab_0
-  - dask-cuda=24.02.00=py310_240212_g96bedbc_0
-  - dask-cudf=24.02.02=cuda12_py310_240227_gdd34fdbe35_0
-  - dataclasses=0.8=pyhc8e2a94_3
-  - datacompy=0.10.5=pyhd8ed1ab_0
-  - debugpy=1.8.1=py310hc6cd4ac_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd8ed1ab_0
-  - dill=0.3.7=pyhd8ed1ab_0
-  - distributed=2024.1.1=pyhd8ed1ab_0
-  - dlpack=0.5=h9c3ff4c_0
-  - docker-py=5.0.3=pyhd8ed1ab_4
-  - docker-pycreds=0.4.0=py_0
-  - docutils=0.21.2=pyhd8ed1ab_0
-  - elastic-transport=8.13.0=pyhd8ed1ab_0
-  - elasticsearch=8.9.0=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
-  - exceptiongroup=1.2.0=pyhd8ed1ab_2
-  - executing=2.0.1=pyhd8ed1ab_0
-  - expat=2.6.2=h59595ed_0
-  - fastrlock=0.8.2=py310hc6cd4ac_2
-  - feedparser=6.0.10=pyhd8ed1ab_0
-  - filelock=3.13.4=pyhd8ed1ab_0
-  - flask=3.0.3=pyhd8ed1ab_0
-  - fmt=10.2.1=h00ab1b0_0
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=h77eed37_1
-  - fontconfig=2.14.2=h14ed4e7_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - fonttools=4.51.0=py310h2372a71_0
-  - fqdn=1.5.1=pyhd8ed1ab_0
-  - freetype=2.12.1=h267a509_2
-  - fribidi=1.0.10=h36c2ea0_0
-  - fs=2.4.16=pyhd8ed1ab_0
-  - fsspec=2024.3.1=pyhca7485f_0
-  - fugue=0.8.7=pyhd8ed1ab_0
-  - fugue-sql-antlr=0.2.0=pyhd8ed1ab_0
-  - gdk-pixbuf=2.42.11=hb9ae30d_0
-  - gflags=2.2.2=he1b5a44_1004
-  - giflib=5.2.2=hd590300_0
-  - gitdb=4.0.11=pyhd8ed1ab_0
-  - gitpython=3.1.43=pyhd8ed1ab_0
-  - glog=0.6.0=h6f12383_0
-  - gmock=1.14.0=ha770c72_1
-  - gmp=6.3.0=h59595ed_1
-  - gmpy2=2.1.5=py310hc3586ac_0
-  - googleapis-common-protos=1.63.0=pyhd8ed1ab_0
-  - graphene=3.3=pyhd8ed1ab_0
-  - graphite2=1.3.13=h59595ed_1003
-  - graphql-core=3.2.3=pyhd8ed1ab_0
-  - graphql-relay=3.2.0=pyhd8ed1ab_0
-  - graphviz=9.0.0=h78e8752_1
-  - greenlet=3.0.3=py310hc6cd4ac_0
-  - grpclib=0.4.7=pyhd8ed1ab_0
-  - gtest=1.14.0=h00ab1b0_1
-  - gtk2=2.24.33=h280cfa0_4
-  - gts=0.7.6=h977cf35_4
-  - gunicorn=21.2.0=py310hff52083_1
-  - h2=4.1.0=pyhd8ed1ab_0
-  - harfbuzz=8.4.0=h3d44ed6_0
-  - hpack=4.0.0=pyh9f0ad1d_0
-  - hyperframe=6.0.1=pyhd8ed1ab_0
-  - icu=73.2=h59595ed_0
-  - idna=3.7=pyhd8ed1ab_0
-  - imagesize=1.4.1=pyhd8ed1ab_0
-  - importlib-metadata=7.1.0=pyha770c72_0
-  - importlib_metadata=7.1.0=hd8ed1ab_0
-  - importlib_resources=6.4.0=pyhd8ed1ab_0
-  - ipykernel=6.29.4=pyh3099207_0
-  - ipython=8.25.0=pyh707e725_0
-  - ipython_genutils=0.2.0=pyhd8ed1ab_1
-  - ipywidgets=8.1.3=pyhd8ed1ab_0
-  - isoduration=20.11.0=pyhd8ed1ab_0
-  - itsdangerous=2.2.0=pyhd8ed1ab_0
-  - jedi=0.19.1=pyhd8ed1ab_0
-  - jinja2=3.1.3=pyhd8ed1ab_0
-  - joblib=1.4.0=pyhd8ed1ab_0
-  - jsonpointer=3.0.0=py310hff52083_0
-  - jsonschema=4.22.0=pyhd8ed1ab_0
-  - jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
-  - jsonschema-with-format-nongpl=4.22.0=pyhd8ed1ab_0
-  - jupyter_client=7.4.9=pyhd8ed1ab_0
-  - jupyter_contrib_core=0.4.0=pyhd8ed1ab_0
-  - jupyter_contrib_nbextensions=0.7.0=pyhd8ed1ab_0
-  - jupyter_core=5.7.2=py310hff52083_0
-  - jupyter_events=0.10.0=pyhd8ed1ab_0
-  - jupyter_highlight_selected_word=0.2.0=pyhd8ed1ab_1006
-  - jupyter_latex_envs=1.4.6=pyhd8ed1ab_1002
-  - jupyter_nbextensions_configurator=0.6.1=pyhd8ed1ab_0
-  - jupyter_server=2.14.1=pyhd8ed1ab_0
-  - jupyter_server_terminals=0.5.3=pyhd8ed1ab_0
-  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
-  - jupyterlab_widgets=3.0.11=pyhd8ed1ab_0
-  - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.5=py310hd41b1e2_1
-  - krb5=1.21.2=h659d440_0
-  - lcms2=2.16=hb7c19ff_0
-  - ld_impl_linux-64=2.40=h55db66e_0
-  - lerc=4.0.0=h27087fc_0
-  - libabseil=20230802.1=cxx17_h59595ed_0
-  - libarrow=14.0.2=h7303f25_3_cuda
-  - libarrow-acero=14.0.2=h27087fc_3_cuda
-  - libarrow-dataset=14.0.2=h27087fc_3_cuda
-  - libarrow-flight=14.0.2=hc63cbfb_3_cuda
-  - libarrow-flight-sql=14.0.2=hd924b76_3_cuda
-  - libarrow-gandiva=14.0.2=hfa8be3f_3_cuda
-  - libarrow-substrait=14.0.2=hd924b76_3_cuda
-  - libblas=3.9.0=16_linux64_mkl
-  - libboost=1.84.0=h8013b2b_2
-  - libboost-devel=1.84.0=h00ab1b0_2
-  - libboost-headers=1.84.0=ha770c72_2
-  - libbrotlicommon=1.1.0=hd590300_1
-  - libbrotlidec=1.1.0=hd590300_1
-  - libbrotlienc=1.1.0=hd590300_1
-  - libcblas=3.9.0=16_linux64_mkl
-  - libcrc32c=1.1.2=h9c3ff4c_0
-  - libcublas=12.1.0.26=0
-  - libcudf=24.02.02=cuda12_240227_gdd34fdbe35_0
-  - libcufft=11.0.2.4=0
-  - libcufile=1.6.1.9=hd3aeb46_0
-  - libcufile-dev=1.6.1.9=hd3aeb46_0
-  - libcurand=10.3.2.106=hd3aeb46_0
-  - libcurl=8.7.1=hca28451_0
-  - libcusolver=11.4.4.55=0
-  - libcusparse=12.0.2.55=0
-  - libdeflate=1.20=hd590300_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=hd590300_2
-  - libevent=2.1.12=hf998b51_1
-  - libexpat=2.6.2=h59595ed_0
-  - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=13.2.0=hc881cc4_6
-  - libgd=2.3.3=h119a65a_9
-  - libgfortran-ng=13.2.0=h69a702a_6
-  - libgfortran5=13.2.0=h43f5ff8_6
-  - libglib=2.80.0=hf2295e7_6
-  - libgomp=13.2.0=hc881cc4_6
-  - libgoogle-cloud=2.12.0=h5206363_4
-  - libgrpc=1.59.3=hd6c4280_0
-  - libhwloc=2.9.2=default_h554bfaf_1009
-  - libiconv=1.17=hd590300_2
-  - libjpeg-turbo=3.0.0=hd590300_1
-  - libkvikio=24.02.01=cuda12_240226_gfe01c15_0
-  - liblapack=3.9.0=16_linux64_mkl
-  - liblapacke=3.9.0=16_linux64_mkl
-  - libllvm14=14.0.6=hcd5def8_4
-  - libllvm15=15.0.7=hb3ce162_4
-  - libmrc=24.03.01=cuda_12.1_h0dae25b_0
-  - libnghttp2=1.58.0=h47da74e_1
-  - libnl=3.9.0=hd590300_0
-  - libnpp=12.0.2.50=0
-  - libnsl=2.0.1=hd590300_0
-  - libntlm=1.4=h7f98852_1002
-  - libnvjitlink=12.1.105=hd3aeb46_0
-  - libnvjpeg=12.1.1.14=0
-  - libopenblas=0.3.27=pthreads_h413a1c8_0
-  - libparquet=14.0.2=habd00f8_3_cuda
-  - libpng=1.6.43=h2797004_0
-  - libprotobuf=4.24.4=hf27288f_0
-  - librdkafka=1.9.2=ha5a0de0_2
-  - libre2-11=2023.09.01=h7a70373_1
-  - librmm=24.02.00=h82930bc_1
-  - librsvg=2.58.0=hadf69e7_1
-  - libsodium=1.0.18=h36c2ea0_1
-  - libsqlite=3.45.3=h2797004_0
-  - libssh2=1.11.0=h0841786_0
-  - libstdcxx-ng=13.2.0=h95c4c6d_6
-  - libthrift=0.19.0=hb90f79a_1
-  - libtiff=4.6.0=h1dd3fc0_3
-  - libutf8proc=2.8.0=h166bdaf_0
-  - libuuid=2.38.1=h0b41bf4_0
-  - libuv=1.48.0=hd590300_0
-  - libwebp=1.3.2=h658648e_1
-  - libwebp-base=1.3.2=hd590300_1
-  - libxcb=1.15=h0b41bf4_0
-  - libxcrypt=4.4.36=hd590300_1
-  - libxml2=2.12.6=h232c23b_2
-  - libxslt=1.1.39=h76b75d6_0
-  - libzlib=1.2.13=hd590300_5
-  - llvm-openmp=15.0.7=h0cdce71_0
-  - llvmlite=0.42.0=py310h1b8f574_1
-  - locket=1.0.0=pyhd8ed1ab_0
-  - lxml=5.2.2=py310h6a33d3d_0
-  - lz4=4.3.3=py310h350c4a5_0
-  - lz4-c=1.9.4=hcb278e6_0
-  - mako=1.3.3=pyhd8ed1ab_0
-  - markdown=3.6=pyhd8ed1ab_0
-  - markdown-it-py=3.0.0=pyhd8ed1ab_0
-  - markupsafe=2.1.5=py310h2372a71_0
-  - matplotlib-base=3.8.4=py310h62c0568_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
-  - mdurl=0.1.2=pyhd8ed1ab_0
-  - merlin-core=23.08.00=py_0
-  - merlin-dataloader=23.08.00=py_0
-  - mistune=3.0.2=pyhd8ed1ab_0
-  - mkl=2022.1.0=h84fe81f_915
-  - mkl-devel=2022.1.0=ha770c72_916
-  - mkl-include=2022.1.0=h84fe81f_915
-  - mlflow=2.12.1=hff52083_1
-  - mlflow-skinny=2.12.1=py310hff52083_1
-  - mlflow-ui=2.12.1=py310hff52083_1
-  - morpheus=24.03.02=cuda_12.1_py3.10_g39afa4f6_0
-  - mpc=1.3.1=hfe3b2da_0
-  - mpfr=4.2.1=h9458935_1
-  - mpmath=1.3.0=pyhd8ed1ab_0
-  - mrc=24.03.01=cuda_12.1_py310_h572eed8_0
-  - msgpack-python=1.0.7=py310hd41b1e2_0
-  - multidict=6.0.5=py310h2372a71_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - nbclassic=1.1.0=pyhd8ed1ab_0
-  - nbclient=0.10.0=pyhd8ed1ab_0
-  - nbconvert=7.16.4=hd8ed1ab_1
-  - nbconvert-core=7.16.4=pyhd8ed1ab_1
-  - nbconvert-pandoc=7.16.4=hd8ed1ab_1
-  - nbformat=5.10.4=pyhd8ed1ab_0
-  - ncurses=6.4.20240210=h59595ed_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - networkx=2.8.8=pyhd8ed1ab_0
-  - nlohmann_json=3.11.3=h59595ed_0
-  - notebook=6.5.7=pyha770c72_0
-  - notebook-shim=0.2.4=pyhd8ed1ab_0
-  - npy-append-array=0.9.16=pyhd8ed1ab_0
-  - numba=0.59.1=py310h7dc5dd1_0
-  - numpy=1.24.4=py310ha4c1d20_0
-  - numpydoc=1.5.0=pyhd8ed1ab_0
-  - nvcomp=3.0.6=h10b603f_0
-  - nvtabular=23.08.00=py310_0
-  - nvtx=0.2.10=py310h2372a71_0
-  - ocl-icd=2.3.2=hd590300_1
-  - openjpeg=2.5.2=h488ebb8_0
-  - openssl=3.3.1=h4ab18f5_0
-  - orc=1.9.2=h4b38347_0
-  - ordered-set=4.1.0=pyhd8ed1ab_0
-  - overrides=7.7.0=pyhd8ed1ab_0
-  - packaging=24.0=pyhd8ed1ab_0
-  - pandas=1.5.3=py310h9b08913_1
-  - pandoc=3.2.1=ha770c72_0
-  - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - pango=1.52.2=ha41ecd1_0
-  - parso=0.8.4=pyhd8ed1ab_0
-  - partd=1.4.1=pyhd8ed1ab_0
-  - pcre2=10.43=hcad00b1_0
-  - pexpect=4.9.0=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pillow=10.3.0=py310hf73ecf8_0
-  - pip=24.0=pyhd8ed1ab_0
-  - pixman=0.43.2=h59595ed_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
-  - platformdirs=4.2.1=pyhd8ed1ab_0
-  - pluggy=1.3.0=pyhd8ed1ab_0
-  - prometheus_client=0.20.0=pyhd8ed1ab_0
-  - prometheus_flask_exporter=0.23.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.47=pyha770c72_0
-  - protobuf=4.24.4=py310h620c231_0
-  - psutil=5.9.8=py310h2372a71_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pyarrow=14.0.2=py310h9a2f4d7_3_cuda
-  - pyarrow-hotfix=0.6=pyhd8ed1ab_0
-  - pycparser=2.22=pyhd8ed1ab_0
-  - pydantic=2.7.1=pyhd8ed1ab_0
-  - pydantic-core=2.18.2=py310he421c4c_0
-  - pygments=2.17.2=pyhd8ed1ab_0
-  - pynvjitlink=0.2.1=py310hdaa3023_0
-  - pynvml=11.4.1=pyhd8ed1ab_0
-  - pyopenssl=24.0.0=pyhd8ed1ab_0
-  - pyparsing=3.1.2=pyhd8ed1ab_0
-  - pysocks=1.7.1=pyha2e5f31_6
-  - python=3.10.14=hd12c33a_0_cpython
-  - python-confluent-kafka=1.9.2=py310h5764c6d_2
-  - python-dateutil=2.9.0=pyhd8ed1ab_0
-  - python-fastjsonschema=2.20.0=pyhd8ed1ab_0
-  - python-graphviz=0.20.3=pyh717bed2_0
-  - python-json-logger=2.0.7=pyhd8ed1ab_0
-  - python-rapidjson=1.16=py310hc6cd4ac_0
-  - python_abi=3.10=4_cp310
-  - pytorch=2.3.0=py3.10_cuda12.1_cudnn8.9.2_0
-  - pytorch-cuda=12.1=ha16c6d3_5
-  - pytorch-mutex=1.0=cuda
-  - pytz=2024.1=pyhd8ed1ab_0
-  - pywin32-on-windows=0.1.0=pyh1179c8e_3
-  - pyyaml=6.0.1=py310h2372a71_1
-  - pyzmq=26.0.3=py310h6883aea_0
-  - qpd=0.4.4=pyhd8ed1ab_1
-  - querystring_parser=1.2.4=py_0
-  - rapids-dask-dependency=24.02.00=0
-  - rdma-core=51.0=hd3aeb46_0
-  - re2=2023.09.01=h7f4b329_1
-  - readline=8.2=h8228510_1
-  - referencing=0.35.1=pyhd8ed1ab_0
-  - requests=2.31.0=pyhd8ed1ab_0
-  - requests-cache=1.1.1=pyhd8ed1ab_0
-  - requests-toolbelt=1.0.0=pyhd8ed1ab_0
-  - rfc3339-validator=0.1.4=pyhd8ed1ab_0
-  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rich=13.7.1=pyhd8ed1ab_0
-  - rmm=24.02.00=cuda12_py310_240212_g09b406c1_0
-  - rpds-py=0.18.1=py310he421c4c_0
-  - s2n=1.4.1=h06160fa_0
-  - scikit-learn=1.3.2=py310h1fdf081_2
-  - scipy=1.13.0=py310hb13e2d6_0
-  - send2trash=1.8.3=pyh0d859eb_0
-  - setuptools=69.5.1=pyhd8ed1ab_0
-  - sgmllib3k=1.0.0=pyh9f0ad1d_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sleef=3.5.1=h9b69904_2
-  - smmap=5.0.0=pyhd8ed1ab_0
-  - snappy=1.1.10=hdb0a2a9_1
-  - sniffio=1.3.1=pyhd8ed1ab_0
-  - snowballstemmer=2.2.0=pyhd8ed1ab_0
-  - sortedcontainers=2.4.0=pyhd8ed1ab_0
-  - soupsieve=2.5=pyhd8ed1ab_1
-  - spdlog=1.12.0=hd2e6256_2
-  - sphinx=7.3.7=pyhd8ed1ab_0
-  - sphinxcontrib-applehelp=1.0.8=pyhd8ed1ab_0
-  - sphinxcontrib-devhelp=1.0.6=pyhd8ed1ab_0
-  - sphinxcontrib-htmlhelp=2.0.5=pyhd8ed1ab_0
-  - sphinxcontrib-jsmath=1.0.1=pyhd8ed1ab_0
-  - sphinxcontrib-qthelp=1.0.7=pyhd8ed1ab_0
-  - sphinxcontrib-serializinghtml=1.1.10=pyhd8ed1ab_0
-  - sqlalchemy=1.4.49=py310h2372a71_1
-  - sqlglot=23.11.2=pyhd8ed1ab_0
-  - sqlparse=0.4.4=pyhd8ed1ab_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - stringcase=1.2.0=py_0
-  - sympy=1.12=pypyh9d50eac_103
-  - tbb=2021.10.0=h00ab1b0_0
-  - tblib=3.0.0=pyhd8ed1ab_0
-  - tensorflow-metadata=1.13.1=pyhd8ed1ab_0
-  - terminado=0.18.1=pyh0d859eb_0
-  - threadpoolctl=3.4.0=pyhc1e730c_0
-  - tinycss2=1.3.0=pyhd8ed1ab_0
-  - tk=8.6.13=noxft_h4845f30_101
-  - tomli=2.0.1=pyhd8ed1ab_0
-  - toolz=0.12.1=pyhd8ed1ab_0
-  - torchtriton=2.3.0=py310
-  - tornado=6.4=py310h2372a71_0
-  - tqdm=4.66.2=pyhd8ed1ab_0
-  - traitlets=5.14.3=pyhd8ed1ab_0
-  - triad=0.9.6=pyhd8ed1ab_0
-  - tritonclient=2.34.0=pyhff2d567_0
-  - types-python-dateutil=2.9.0.20240316=pyhd8ed1ab_0
-  - typing-extensions=4.11.0=hd8ed1ab_0
-  - typing_extensions=4.11.0=pyha770c72_0
-  - typing_utils=0.1.0=pyhd8ed1ab_0
-  - tzdata=2024a=h0c530f3_0
-  - ucx=1.15.0=hda83522_8
-  - ujson=5.9.0=py310hc6cd4ac_0
-  - unicodedata2=15.1.0=py310h2372a71_0
-  - uri-template=1.3.0=pyhd8ed1ab_0
-  - url-normalize=1.4.3=pyhd8ed1ab_0
-  - urllib3=2.2.1=pyhd8ed1ab_0
-  - watchdog=3.0.0=py310hff52083_1
-  - wcwidth=0.2.13=pyhd8ed1ab_0
-  - webcolors=24.6.0=pyhd8ed1ab_0
-  - webencodings=0.5.1=pyhd8ed1ab_2
-  - websocket-client=1.8.0=pyhd8ed1ab_0
-  - websockets=12.0=py310h2372a71_0
-  - werkzeug=3.0.2=pyhd8ed1ab_0
-  - wheel=0.43.0=pyhd8ed1ab_1
-  - widgetsnbextension=4.0.11=pyhd8ed1ab_0
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.1.1=hd590300_0
-  - xorg-libsm=1.2.4=h7391055_0
-  - xorg-libx11=1.8.9=h8ee46fc_0
-  - xorg-libxau=1.0.11=hd590300_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h0b41bf4_2
-  - xorg-libxrender=0.9.11=hd590300_0
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h0b41bf4_1003
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xyzservices=2024.4.0=pyhd8ed1ab_0
-  - xz=5.2.6=h166bdaf_0
-  - yaml=0.2.5=h7f98852_2
-  - zeromq=4.3.5=h75354e8_4
-  - zict=3.0.0=pyhd8ed1ab_0
-  - zipp=3.17.0=pyhd8ed1ab_0
-  - zlib=1.2.13=hd590300_5
-  - zstd=1.5.5=hfc55251_0
+  - aiohttp-client-cache=0.11
+  - aiohttp=3.9
+  - beautifulsoup4=4.12
+  # - faiss-gpu=1.7 # Uncomment this when the package supports CUDA 12. See: https://github.com/conda-forge/faiss-split-feedstock/pull/72
+  - faiss=1.7
+  - openai=1.13
+  - pytorch=*=*cuda*
+  - sentence-transformers>=2.0.0,<3.0.0
+  - tiktoken>=0.3.2,<0.6.0
+  - transformers
+
+  ####### Pip Transitive Dependencies (keep sorted!) #######
+  # These are dependencies that are available on conda, but are required by the pip packages listed below. Its much
+  # better to install them with conda than pip to allow for better dependency resolution.
+  - pydantic=2.6
+
+  ####### Pip Dependencies (keep sorted!) #######
+  - pip
   - pip:
-      - aiofiles==22.1.0
-      - aiohttp==3.9.5
-      - aiosignal==1.3.1
-      - aiosqlite==0.20.0
-      - async-timeout==4.0.3
-      - databricks-cli==0.18.0
-      - databricks-connect==14.3.1
-      - databricks-sdk==0.26.0
-      - environs==9.5.0
-      - frozenlist==1.4.1
-      - google-auth==2.29.0
-      - grpcio==1.60.0
-      - grpcio-status==1.60.0
-      - json5==0.9.25
-      - jupyter-server-fileid==0.9.2
-      - jupyter-server-proxy==4.2.0
-      - jupyter-server-ydoc==0.8.0
-      - jupyter-ydoc==0.2.5
-      - jupyterlab==3.6.7
-      - jupyterlab-nvdashboard==0.9.0
-      - jupyterlab-server==2.27.2
-      - marshmallow==3.21.1
-      - milvus==2.3.5
-      - minio==7.2.5
-      - oauthlib==3.2.2
-      - py4j==0.10.9.7
-      - pyasn1==0.6.0
-      - pyasn1-modules==0.4.0
-      - pycryptodome==3.20.0
-      - pyjwt==2.8.0
-      - pymilvus==2.3.6
-      - python-dotenv==1.0.1
-      - rsa==4.9
-      - simpervisor==1.0.0
-      - tabulate==0.9.0
-      - y-py==0.6.2
-      - yarl==1.9.4
-      - ypy-websocket==0.8.4
-prefix: /opt/conda/envs/morpheus
+    - google-search-results==2.4
+    - langchain-nvidia-ai-endpoints==0.0.3
+    - langchain==0.1.9
+    - nemollm==0.3.5
+    - pydpkg==1.9.2
