feat: add common labels for all resources created by the operator
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -6,3 +6,12 @@ images:
 - name: controller
   newName: quay.io/zgrinber/morpheus-operator
   newTag: 0.0.2
+commonAnnotations:
+  morpheus-jupyter-version: 0.0.2
+  created-by: morpheus-operator
+metadata:
+  annotations:
+    morpheus-jupyter-version: 0.0.2
+    created-by: morpheus-operator
+
+
