feat: add morpheus-catalog for seamless update of operator
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/config/manifests/bases/morpheus-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/morpheus-operator.clusterserviceversion.yaml
@@ -41,7 +41,7 @@ spec:
   - morpheus
   links:
   - name: Morpheus Operator
-    url: https://morpheus-operator.domain
+    url: https://github.com/zvigrinberg/morpheus-operator
   maintainers:
   - email: zgrinber@redhat.com
     name: zvigrinberg
