--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -5,4 +5,7 @@ kind: Kustomization
 images:
 - name: controller
   newName: quay.io/zgrinber/morpheus-operator
-  newTag: 0.0.2
+  newTag: 0.0.3
+commonAnnotations:
+  created-by: morpheus-operator
+  morpheus-jupyter-version: 0.0.3
