--- a/config/manifests/bases/morpheus-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/morpheus-operator.clusterserviceversion.yaml
@@ -3,7 +3,7 @@ kind: ClusterServiceVersion
 metadata:
   annotations:
     alm-examples: '[]'
-    capabilities: Basic Install
+    capabilities: Seamless Upgrades
   name: morpheus-operator.v0.0.0
   namespace: placeholder
 spec:
