--- a/bundle/manifests/morpheus-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/morpheus-operator.clusterserviceversion.yaml
@@ -33,7 +33,7 @@ metadata:
         }
       ]
     capabilities: Seamless Upgrades
-    createdAt: "2024-07-03T06:42:16Z"
+    createdAt: "2024-07-03T09:56:57Z"
     operators.operatorframework.io/builder: operator-sdk-v1.31.0-ocp
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
   name: morpheus-operator.v0.0.3
@@ -338,7 +338,7 @@ spec:
         serviceAccountName: morpheus-operator-controller-manager
     strategy: deployment
   installModes:
-  - supported: false
+  - supported: true
     type: OwnNamespace
   - supported: false
     type: SingleNamespace
