--- a/olm/morpheus-og.yaml
+++ b/olm/morpheus-og.yaml
@@ -2,3 +2,7 @@ apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
     name: morpheus-og
+# UnComment to enable ownNamespace installMode to enable automatic installation of Nvidia GPU Operator
+#spec:
+#  targetNamespaces:
+#  - morpheus-operator
