--- a/jupyter/morpheus-env.yaml
+++ b/jupyter/morpheus-env.yaml
@@ -38,7 +38,9 @@ dependencies:
   - pip
   - pip:
     - google-search-results==2.4
+    - jupyter_contrib_nbextensions
     - langchain-nvidia-ai-endpoints==0.0.3
     - langchain==0.1.9
     - nemollm==0.3.5
     - pydpkg==1.9.2
+    - python-dotenv
