fix: add permissions for configmap
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/bundle/metadata/dependencies.yaml
+++ b/bundle/metadata/dependencies.yaml
@@ -1,5 +1,5 @@
-dependencies:
-  - type: olm.package
-    value:
-      packageName: gpu-operator-certified
-      version: "> 23.9.0"
+dependencies: {}
+#  - type: olm.package
+#    value:
+#      packageName: gpu-operator-certified
+#      version: "> 23.9.0"
