fix: change the default toleration' key docs: add explanatory description to new 2 api fields
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/config/crd/bases/ai.redhat.com_morpheus.yaml
+++ b/config/crd/bases/ai.redhat.com_morpheus.yaml
@@ -80,10 +80,16 @@ spec:
               nodeSelector:
                 additionalProperties:
                   type: string
+                description: pass (key,value) label pairs to morpheus jupyter and
+                  triton server deployments' podTemplate.nodeSelector in order to
+                  schedule their pods on a particular gpu node
                 type: object
               serviceAccountName:
                 type: string
               tolerations:
+                description: pass tolerations list to morpheus jupyter and triton
+                  server deployments' podTemplate.tolerations in order to schedule
+                  their pods on a particular gpu node ( satisfy its taints).
                 items:
                   description: The pod this Toleration is attached to tolerates any
                     taint that matches the triple <key,value,effect> using the matching
