--- a/olm/morpheus-catalog/operator.yaml
+++ b/olm/morpheus-catalog/operator.yaml
@@ -467,6 +467,105 @@ relatedImages:
   name: ""
 schema: olm.bundle
 ---
+image: quay.io/zgrinber/morpheus-operator-bundle:v0.0.5
+name: morpheus-operator.v0.0.5
+package: morpheus-operator
+properties:
+- type: olm.gvk
+  value:
+    group: ai.redhat.com
+    kind: Morpheus
+    version: v1alpha1
+- type: olm.package
+  value:
+    packageName: morpheus-operator
+    version: 0.0.5
+- type: olm.csv.metadata
+  value:
+    annotations:
+      alm-examples: |-
+        [
+          {
+            "apiVersion": "ai.redhat.com/v1alpha1",
+            "kind": "Morpheus",
+            "metadata": {
+              "labels": {
+                "app.kubernetes.io/created-by": "morpheus-operator",
+                "app.kubernetes.io/instance": "morpheus-sample",
+                "app.kubernetes.io/managed-by": "kustomize",
+                "app.kubernetes.io/name": "morpheus",
+                "app.kubernetes.io/part-of": "morpheus-operator"
+              },
+              "name": "morpheus-example"
+            },
+            "spec": {
+              "autoBindSccToSa": true,
+              "jupyter": {
+                "environmentVars": {
+                  "MY_ENV_VAR_KEY": "my-env-var-val",
+                  "openaiApiKey": "your-api-key-value-goes-here",
+                  "yourEnvVariableHere": "your-env-var-value-goes-here-again"
+                },
+                "labPassword": "yourPassword"
+              },
+              "milvus": {
+                "minio": {
+                  "rootPassword": "admin123#",
+                  "rootUser": "admin"
+                }
+              },
+              "serviceAccountName": "morpheus-sa"
+            }
+          }
+        ]
+      capabilities: Seamless Upgrades
+      createdAt: "2024-10-29T15:13:46Z"
+      operators.operatorframework.io/builder: operator-sdk-v1.31.0-ocp
+      operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
+    apiServiceDefinitions: {}
+    crdDescriptions:
+      owned:
+      - description: Morpheus is the Schema for the morpheuses API
+        displayName: Morpheus
+        kind: Morpheus
+        name: morpheus.ai.redhat.com
+        statusDescriptors:
+        - displayName: Conditions
+          path: conditions
+        version: v1alpha1
+    description: Helps installs Nvidia Morpheus on an openshift and Kubernetes clusters
+    displayName: morpheus-operator
+    installModes:
+    - supported: true
+      type: OwnNamespace
+    - supported: false
+      type: SingleNamespace
+    - supported: false
+      type: MultiNamespace
+    - supported: true
+      type: AllNamespaces
+    keywords:
+    - ai
+    - morpheus
+    links:
+    - name: Morpheus Operator
+      url: https://github.com/zvigrinberg/morpheus-operator
+    maintainers:
+    - email: zgrinber@redhat.com
+      name: zvigrinberg
+    maturity: alpha
+    provider:
+      name: redhat
+      url: redhat.com
+relatedImages:
+- image: quay.io/zgrinber/morpheus-operator-bundle:v0.0.5
+  name: ""
+- image: quay.io/zgrinber/morpheus-operator:0.0.5
+  name: ""
+- image: registry.redhat.io/openshift4/ose-kube-rbac-proxy:v4.15
+  name: ""
+schema: olm.bundle
+---
 schema: olm.channel
 package: morpheus-operator
 name: alpha
@@ -476,3 +575,5 @@ entries:
     replaces: morpheus-operator.v0.0.2
   - name: morpheus-operator.v0.0.4
     replaces: morpheus-operator.v0.0.3
+  - name: morpheus-operator.v0.0.5
+    replaces: morpheus-operator.v0.0.4
